--- a/index.css
+++ b/index.css
@@ -77,3 +77,24 @@ body {
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.7);
     /* Sombra negra */
 }
+
+.contactForm {
+    top: 30%;
+
+}
+
+.bannerContact {
+    top: 30%;
+}
+
+.imgContract {
+    max-width: 70%;
+    border-radius: 25px;
+    top: 30%;
+    /* Centrado verticalmente */
+    left: 70%;
+    /* Centrado horizontalmente */
+    object-fit: cover;
+    transition: box-shadow 0.5s ease-in-out;
+    /* Transición suave */
+}
